--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.10",
+    "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.1.1"
   },
